<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_rv">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="144dp"
        android:layout_height="137dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teeth_class_white" />

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Position"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FullName_item"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPosition"
        app:layout_constraintStart_toStartOf="@+id/tvPosition"
        app:layout_constraintTop_toBottomOf="@+id/tvPosition" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Category"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/tvFullName"
        app:layout_constraintStart_toStartOf="@+id/tvFullName"
        app:layout_constraintTop_toBottomOf="@+id/tvFullName" />

    <TextView
        android:id="@+id/tvWorkingHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/WorkingHours"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/tvCategory"
        app:layout_constraintStart_toStartOf="@+id/tvCategory"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Phone"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWorkingHours"
        app:layout_constraintStart_toStartOf="@+id/tvWorkingHours"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkingHours" />


</androidx.constraintlayout.widget.ConstraintLayout>